--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,6 +61,12 @@ input {
   color: white;
   text-decoration: none;
 }
+.home{
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 a {
   color: white;
